Fix: fx review numbers overflow problem in css

--- a/src/Restaurant/Restaurant.module.css
+++ b/src/Restaurant/Restaurant.module.css
@@ -1,6 +1,9 @@
 /* styles.module.css */
 .reviewContainer {
-  max-height: 324px; /* 원하는 높이로 설정 */
+  /* max-height: 324px; */
+  max-height: 100px;
+
+  /* 원하는 높이로 설정 */
   overflow-y: auto; /* 세로로 스크롤 가능하게 설정 */
   display: flex;
   flex-direction: column;
@@ -189,7 +192,6 @@
   font-size: 1.0197452306747437rem;
   font-weight: 300;
   position: relative;
-  width: 1.125rem;
   height: 1.9375rem;
   display: flex;
   align-items: center;
